--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,20 @@
 language: cpp
 compiler:
-  - clang
   - gcc
+
+matrix:
+  include:
+    - os: linux
+      addons:
+        apt:
+          sources:
+            - ubuntu-toolchain-r-test
+          packages:
+            - g++-7
+      env:
+        - MATRIX_EVAL="CC=gcc-7 && CXX=g++-7"
+
+before_install:
+    - eval "${MATRIX_EVAL}"
 
 script: make test
