--- a/.travis.yml
+++ b/.travis.yml
@@ -16,5 +16,14 @@ matrix:
 
 before_install:
     - eval "${MATRIX_EVAL}"
+    - sudo apt-get install -y libgtest-dev cmake
+    - sudo wget https://github.com/google/googletest/archive/release-1.7.0.tar.gz
+    - sudo tar xf release-1.7.0.tar.gz
+    - cd googletest-release-1.7.0
+    - sudo cmake -DBUILD_SHARED_LIBS=ON .
+    - sudo make
+    - sudo cp -a include/gtest /usr/include
+    - sudo cp -a libgtest_main.so libgtest.so /usr/lib/
+    - cd "${TRAVIS_BUILD_DIR}"
 
 script: make test COMPILER=g++-7
