Added libc++abi-dev to the list of Clang packages.

--- a/.travis.yml
+++ b/.travis.yml
@@ -22,6 +22,7 @@ matrix:
           packages:
             - clang-6.0
             - libstdc++6
+            - libc++abi-dev
       env:
         - MATRIX_EVAL="CC=clang-6.0 && CXX=clang-6.0"
 
