--- a/.travis.yml
+++ b/.travis.yml
@@ -18,13 +18,11 @@ matrix:
       addons:
         apt:
           sources:
-            - llvm-toolchain-trusty-6.0
+            - llvm-toolchain-trusty-5.0
           packages:
-            - clang-6.0
-            - libstdc++6
-            - libc++abi-dev
+            - clang-5.0
       env:
-        - MATRIX_EVAL="CC=clang-6.0 && CXX=clang-6.0"
+        - MATRIX_EVAL="CC=clang-5.0 && CXX=clang++-5.0"
 
 before_install:
   - eval "${MATRIX_EVAL}"
