--- a/.travis.yml
+++ b/.travis.yml
@@ -1,32 +1,16 @@
 language: cpp
+dist: bionic
 
 matrix:
-  # GCC 7
   include:
+    # GCC 7
     - os: linux
-      addons:
-        apt:
-          sources:
-            - ubuntu-toolchain-r-test
-          packages:
-            - g++-7
       env: MATRIX_EVAL="CC=gcc-7 && CXX=g++-7"
       compiler: gcc
 
-    # Clang 6.0
+    # Clang 7.0
     - os: linux
-      addons:
-        apt:
-          sources:
-            - ubuntu-toolchain-r-test
-            - llvm-toolchain-trusty-6.0
-            - sourceline: 'deb http://apt.llvm.org/trusty/ llvm-toolchain-trusty-6.0 main'
-              key_url: 'https://apt.llvm.org/llvm-snapshot.gpg.key'
-          packages:
-            - clang-6.0
-            - libstdc++6
-            - g++-7
-      env: MATRIX_EVAL="CC=clang-6.0 && CXX=clang++-6.0"
+      env: MATRIX_EVAL="CC=clang-7.0 && CXX=clang++-7.0"
       compiler: clang
 
 # Install Google Test
