--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ matrix:
   include:
     # GCC 7
     - os: linux
-      env: MATRIX_EVAL="CC=gcc-7 && CXX=g++-7"
+      env: MATRIX_EVAL="CC=gcc && CXX=g++"
       compiler: gcc
 
     # Clang 7.0
@@ -15,8 +15,6 @@ matrix:
 
 # Install Google Test
 before_install:
-  - which g++-7
-  - which g++
   - eval "${MATRIX_EVAL}"
   - sudo apt-get install -y libgtest-dev cmake
   - sudo wget https://github.com/google/googletest/archive/release-1.7.0.tar.gz
