--- a/.travis.yml
+++ b/.travis.yml
@@ -16,8 +16,8 @@ matrix:
 # Install Google Test
 before_install:
   - eval "${MATRIX_EVAL}"
-  - sudo ln -s /usr/bin/clang `which clang`
-  - sudo ln -s /usr/bin/clang++ `which clang++`
+  - sudo ln -s `which clang` /usr/bin/clang
+  - sudo ln -s `which clang++` /usr/bin/clang++
   - sudo apt-get install -y libgtest-dev cmake
   - sudo wget https://github.com/google/googletest/archive/release-1.7.0.tar.gz
   - sudo tar xf release-1.7.0.tar.gz
